--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,6 @@
         </pluginManagement>
     </build>
     <modules>
-      <module>fastinfoset-temp</module>
       <module>core</module>
       <module>jdsl</module>
       <module>distribution</module>
@@ -96,4 +95,12 @@
         </dependency>
       </dependencies>
     </dependencyManagement>
+    <repositories>
+      <repository>
+	<id>maven2-repository.java.net</id>
+	<name>Java.net Repository for Maven</name>
+	<url>http://download.java.net/maven/2/</url>
+	<layout>default</layout>
+      </repository>
+    </repositories>
 </project>
