--- a/jdsl/pom.xml
+++ b/jdsl/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.sun.xml.fastinfoset</groupId>
             <artifactId>FastInfoset</artifactId>
-            <version>1.2.9</version>
+            <version>1.2.10-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.stream.buffer</groupId>
