--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
     </scm>
     <build>
         <defaultGoal>install</defaultGoal>
+	<extensions>
+	  <extension>
+	    <groupId>org.jvnet.wagon-svn</groupId>
+	    <artifactId>wagon-svn</artifactId>
+	    <version>1.12</version>
+	  </extension>
+	</extensions>
         <pluginManagement>
             <plugins>
             <plugin>
@@ -52,7 +59,6 @@
         </pluginManagement>
     </build>
     <modules>
-      <module>fastinfoset-temp</module>
       <module>core</module>
       <module>jdsl</module>
       <module>distribution</module>
@@ -104,4 +110,20 @@
 	<layout>default</layout>
       </repository>
     </repositories>
+    <profiles>
+      <profile>
+	<id>java-net-distro</id>
+	<!-- turn on distro to java.net. We'll push bundles to OSSRH in addition, possibly via a profile -->
+	<distributionManagement>
+	  <repository>
+	    <id>java.net-m2-repository</id>
+	    <url>java-net:/maven2-repository~svn/trunk/repository/</url>
+	  </repository>
+	  <snapshotRepository>
+	    <id>java.net-m2-repository</id>
+	    <url>java-net:/maven2-repository~svn/trunk/repository/</url>
+	  </snapshotRepository>
+	</distributionManagement>
+      </profile>
+    </profiles>
 </project>
