--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
 		  <artifactId>maven-site-plugin</artifactId>
 		  <version>2.2</version>
 		</plugin>
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-surefire-plugin</artifactId>
+		  <version>2.7.2</version>
+		</plugin>
+		<plugin>
+		  <groupId>org.codehaus.modello</groupId>
+		  <artifactId>modello-maven-plugin</artifactId>
+		  <version>1.4.1</version>
+		</plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -148,6 +158,11 @@
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>2.3.1</version>
       </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>2.7.2</version>
+          </plugin>
     </plugins>
   </reporting>
 </project>
