--- a/distribution/samples/EmbeddedSimpleClasspath/build.xml
+++ b/distribution/samples/EmbeddedSimpleClasspath/build.xml
@@ -1,6 +1,6 @@
 <project name="Embedded with Simple Classpath" default="run"  basedir=".">
     <property environment="env"/>
-    <property name="config" value="simple-regex-config.xml"/>
+    <property name="config" value="japex-config.xml"/>
 
     <path id="class.path">
 	<pathelement location="dist/classes"/>
