--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,6 +11,12 @@
       <version>1.2-SNAPSHOT</version>
     </parent>
     <build>
+        <resources>
+          <resource>
+           <directory>src/main/filtered-resources</directory>
+           <filtering>true</filtering>
+        </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
