--- a/japex-maven-plugin/pom.xml
+++ b/japex-maven-plugin/pom.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>japex-all</artifactId>
     <groupId>com.sun.japex</groupId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
   </parent>
   <groupId>com.sun.japex</groupId>
   <artifactId>japex-maven-plugin</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <packaging>maven-plugin</packaging>
   <name>japex-maven-plugin Maven Mojo</name>
   <build>
@@ -52,7 +51,7 @@
      <dependency>
      	<groupId>com.sun.japex</groupId>
      	<artifactId>japex</artifactId>
-     	<version>1.2-SNAPSHOT</version>
+     	<version>1.2</version>
      	<type>jar</type>
      	<scope>compile</scope>
      </dependency>
