--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.japex</groupId>
     <artifactId>japex</artifactId>
-    <version>1.2</version>
+    <version>1.2-SNAPSHOT</version>
     <name>Japex core</name>
     <parent>
       <groupId>com.sun.japex</groupId>
       <artifactId>japex-all</artifactId>
-      <version>1.2</version>
+      <version>1.2-SNAPSHOT</version>
     </parent>
     <build>
         <resources>
