--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 	</extensions>
         <pluginManagement>
             <plugins>
+	      <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.1</version>
+	      </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
