--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.1</version>
+		<configuration>
+		  <remoteTagging>true</remoteTagging>
+		</configuration>
 	      </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
