--- a/pom.xml
+++ b/pom.xml
@@ -12,165 +12,162 @@
         <version>6</version>
     </parent>
     <licenses>
-      <license>
-	<name>The Apache Software License, Version 2.0</name>
-	<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-	<distribution>repo</distribution>
-      </license>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
     </licenses>
     <!-- eventually inherit from parent, but one piece at a time -->
     <!-- or we might not want this to be tied together at the top, anyhow -->
     <scm>
-        <connection>scm:svn:http://svn.java.net/svn/japex~svn/trunk/japex</connection>
-        <developerConnection>scm:svn:https://svn.java.net/svn/japex~svn/trunk/japex</developerConnection>
+        <connection>scm:svn:http://svn.java.net/svn/japex~svn/trunk</connection>
+        <developerConnection>scm:svn:https://svn.java.net/svn/japex~svn/trunk</developerConnection>
         <!-- no URL, no browse access set up -->
     </scm>
     <build>
         <defaultGoal>install</defaultGoal>
-	<extensions>
-	  <extension>
-	    <groupId>org.jvnet.wagon-svn</groupId>
-	    <artifactId>wagon-svn</artifactId>
-	    <version>1.12</version>
-	  </extension>
-	</extensions>
+        <extensions>
+            <extension>
+                <groupId>org.jvnet.wagon-svn</groupId>
+                <artifactId>wagon-svn</artifactId>
+                <version>1.12</version>
+            </extension>
+        </extensions>
         <pluginManagement>
             <plugins>
-	      <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.1</version>
-		<configuration>
-		  <remoteTagging>true</remoteTagging>
-		</configuration>
-	      </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.5</source>
+                        <target>1.5</target>
+                    </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>2.4.3</version>
                 </plugin>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-jar-plugin</artifactId>
-		  <version>2.3.1</version>
-		</plugin>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-javadoc-plugin</artifactId>
-		  <version>2.7</version>
-		</plugin>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-plugin-plugin</artifactId>
-		  <version>2.7</version>
-		</plugin>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-site-plugin</artifactId>
-		  <version>2.2</version>
-		</plugin>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-surefire-plugin</artifactId>
-		  <version>2.7.2</version>
-		</plugin>
-		<plugin>
-		  <groupId>org.codehaus.modello</groupId>
-		  <artifactId>modello-maven-plugin</artifactId>
-		  <version>1.4.1</version>
-		</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.3.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.7.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.modello</groupId>
+                    <artifactId>modello-maven-plugin</artifactId>
+                    <version>1.4.1</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
     <modules>
-      <module>core</module>
-      <module>jdsl</module>
-      <module>distribution</module>
-      <module>japex-maven-plugin</module>
+        <module>core</module>
+        <module>jdsl</module>
+        <module>distribution</module>
+        <module>japex-maven-plugin</module>
     </modules>
     <dependencyManagement>
-      <dependencies>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <type>jar</type>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>jfree</groupId>
-            <artifactId>jfreechart</artifactId>
-            <version>1.0.12</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>jfree</groupId>
-            <artifactId>jcommon</artifactId>
-            <version>1.0.12</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-      </dependencies>
+        <dependencies>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.4</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.2</version>
+                <type>jar</type>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>jfree</groupId>
+                <artifactId>jfreechart</artifactId>
+                <version>1.0.12</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>jfree</groupId>
+                <artifactId>jcommon</artifactId>
+                <version>1.0.12</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ant</groupId>
+                <artifactId>ant</artifactId>
+                <version>1.7.0</version>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
     <repositories>
-      <repository>
-	<id>maven2-repository.java.net</id>
-	<name>Java.net Repository for Maven</name>
-	<url>http://download.java.net/maven/2/</url>
-	<layout>default</layout>
-      </repository>
+        <repository>
+            <id>maven2-repository.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
     </repositories>
     <profiles>
-      <profile>
-	<id>java-net-distro</id>
-	<!-- turn on distro to java.net. We'll push bundles to OSSRH in addition, possibly via a profile -->
-	<distributionManagement>
-	  <repository>
-	    <id>java.net-m2-repository</id>
-	    <url>java-net:/maven2-repository~svn/trunk/repository/</url>
-	  </repository>
-	  <snapshotRepository>
-	    <id>java.net-m2-repository</id>
-	    <url>java-net:/maven2-repository~svn/trunk/repository/</url>
-	  </snapshotRepository>
-	</distributionManagement>
-      </profile>
+        <profile>
+            <id>java-net-distro</id>
+            <!-- turn on distro to java.net. We'll push bundles to OSSRH in addition, possibly via a profile -->
+            <distributionManagement>
+                <repository>
+                    <id>java.net-m2-repository</id>
+                    <url>java-net:/maven2-repository~svn/trunk/repository/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>java.net-m2-repository</id>
+                    <url>java-net:/maven2-repository~svn/trunk/repository/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
     </profiles>
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.3.1</version>
-      </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-report-plugin</artifactId>
-            <version>2.7.2</version>
-          </plugin>
-    </plugins>
-  </reporting>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.7.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
