--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.sun.japex</groupId>
     <artifactId>japex-all</artifactId>
     <packaging>pom</packaging>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <name>Japex</name>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -21,10 +21,11 @@
     <!-- eventually inherit from parent, but one piece at a time -->
     <!-- or we might not want this to be tied together at the top, anyhow -->
     <scm>
-        <connection>scm:svn:http://svn.java.net/svn/japex~svn/tags/japex-all-1.2</connection>
-        <developerConnection>scm:svn:https://svn.java.net/svn/japex~svn/tags/japex-all-1.2</developerConnection>
+        <connection>scm:svn:http://svn.java.net/svn/japex~svn/trunk</connection>
+        <developerConnection>scm:svn:https://svn.java.net/svn/japex~svn/trunk</developerConnection>
         <!-- no URL, no browse access set up -->
-    </scm>
+      <url>http://svn.sonatype.org/spice/tags/oss-parent-6/japex-all</url>
+  </scm>
     <build>
         <defaultGoal>install</defaultGoal>
         <extensions>
