--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,16 +6,20 @@
     <version>1.2.1-SNAPSHOT</version>
     <name>Japex core</name>
     <parent>
-      <groupId>com.sun.japex</groupId>
-      <artifactId>japex-all</artifactId>
-      <version>1.2.1-SNAPSHOT</version>
+        <groupId>com.sun.japex</groupId>
+        <artifactId>japex-all</artifactId>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
     <build>
         <resources>
-          <resource>
-           <directory>src/main/filtered-resources</directory>
-           <filtering>true</filtering>
-        </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/filtered-resources</directory>
+                <filtering>true</filtering>
+            </resource>
         </resources>
         <plugins>
             <plugin>
@@ -33,17 +37,17 @@
         </plugins>
         <pluginManagement>
             <plugins>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-jar-plugin</artifactId>
-		  <configuration>
-		    <archive>
-		      <manifest>
-			<addClasspath>true</addClasspath>
-		      </manifest>
-		    </archive>
-		  </configuration>
-		</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -74,18 +78,18 @@
             <version>1.7.0</version>
         </dependency>
         <dependency>
-        	<groupId>org.slf4j</groupId>
-        	<artifactId>slf4j-api</artifactId>
-        	<version>1.6.1</version>
-        	<type>jar</type>
-        	<scope>compile</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-        	<groupId>org.slf4j</groupId>
-        	<artifactId>slf4j-simple</artifactId>
-        	<version>1.6.1</version>
-        	<type>jar</type>
-        	<scope>compile</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
