--- a/distribution/samples/maven-plugin/pom.xml
+++ b/distribution/samples/maven-plugin/pom.xml
@@ -29,7 +29,7 @@
       <dependency>
 	<groupId>com.sun.japex</groupId>
 	<artifactId>japex</artifactId>
-	<version>1.1.8-SNAPSHOT</version>
+	<version>1.2.1</version>
       </dependency>
     </dependencies>
     <build>
@@ -38,7 +38,7 @@
 	  <plugin>
 	    <groupId>com.sun.japex</groupId>
 	    <artifactId>japex-maven-plugin</artifactId>
-	    <version>1.1.8-SNAPSHOT</version>
+	    <version>1.2.1</version>
 	    <executions>
 	      <execution>
 		<id>japex</id>
