--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.japex</groupId>
     <artifactId>japex</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <name>Japex core</name>
     <parent>
         <groupId>com.sun.japex</groupId>
         <artifactId>japex-all</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
     <build>
         <resources>
