--- a/jdsl/pom.xml
+++ b/jdsl/pom.xml
@@ -3,18 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.japex</groupId>
     <artifactId>jdsl</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <name>Japex jdsl</name>
     <parent>
       <groupId>com.sun.japex</groupId>
       <artifactId>japex-all</artifactId>
-      <version>1.2.1-SNAPSHOT</version>
+      <version>1.2.1</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.sun.japex</groupId>
             <artifactId>japex</artifactId>
-            <version>1.2.1-SNAPSHOT</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.fastinfoset</groupId>
