--- a/japex-maven-plugin/pom.xml
+++ b/japex-maven-plugin/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <artifactId>japex-all</artifactId>
     <groupId>com.sun.japex</groupId>
-    <version>1.2.3-SNAPSHOT</version>
+    <version>1.2.3</version>
   </parent>
   <groupId>com.sun.japex</groupId>
   <artifactId>japex-maven-plugin</artifactId>
-  <version>1.2.3-SNAPSHOT</version>
+  <version>1.2.3</version>
   <packaging>maven-plugin</packaging>
   <name>japex-maven-plugin Maven Mojo</name>
   <build>
@@ -51,7 +51,7 @@
      <dependency>
      	<groupId>com.sun.japex</groupId>
      	<artifactId>japex</artifactId>
-     	<version>1.2.3-SNAPSHOT</version>
+     	<version>1.2.3</version>
      	<type>jar</type>
      	<scope>compile</scope>
      </dependency>
