--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.japex</groupId>
     <artifactId>japex-distribution</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4-SNAPSHOT</version>
     <name>Japex distribution</name>
     <packaging>jar</packaging>
     <parent>
       <groupId>com.sun.japex</groupId>
       <artifactId>japex-all</artifactId>
-      <version>1.2.3</version>
+      <version>1.2.4-SNAPSHOT</version>
     </parent>
     <build>
         <plugins>
@@ -42,12 +42,12 @@
         <dependency>
 	  <groupId>com.sun.japex</groupId>
 	  <artifactId>japex</artifactId>
-	  <version>1.2.3</version>
+	  <version>1.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
 	  <groupId>com.sun.japex</groupId>
 	  <artifactId>jdsl</artifactId>
-	  <version>1.2.3</version>
+	  <version>1.2.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
